# big-plan

./: .gitignore  AGENT.md  CLAUDE.md  README.md  SKILL.md  loop  loop-plan.md  simplification-plan.md
.github/workflows/: ci.yml
.loop/: CURRENT  agent-project.md  cli-contract.md  log.jsonl  plan.md  sqlite-schema.md
.loop/tasks/: 001-refine-rust-sqlite-release-plan-and-generate-focused-implementation-tasks.md  002-finalize-public-cli-api-and-user-facing-behavior-contract.md  003-design-sqlite-schema-and-migration-versioning-strategy.md  004-define-rust-domain-model-and-state-transition-rules.md  005-implement-rust-cli-parsing-and-command-dispatch-shell.md  006-implement-sqlite-repository-adapter-with-rusqlite.md  007-implement-task-markdown-rendering-and-read-show-projections.md  008-implement-orchestrator-run-loop-and-agent-process-adapter.md  009-implement-git-integration-adapter-and-commit-policy.md  010-add-focused-tests-for-domain-logic-and-sqlite-persistence.md  (+2 more)
bp-rs/: Cargo.toml
bp-rs/src/: agent_stream.rs  cli.rs  commands.rs  domain.rs  main.rs  orchestrator.rs  prompts.rs  render.rs  repository.rs  run_lock.rs  sqlite_repo.rs  status_view.rs  summary.rs
bp-rs/templates/: SKILL.md
bp-rs/tests/: cli_integration.rs  real_agent.rs
loop-rs/: Cargo.toml
loop-rs/src/: cli.rs  commands.rs  domain.rs  main.rs  orchestrator.rs  render.rs  repository.rs  sqlite_repo.rs
loop-rs/tests/: cli_integration.rs
loop_lib/: __init__.py  cli.py  git.py  runner.py  storage.py
tests/: integration_loop_run.py
