[package]
name = "loop-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "loop"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
tempfile = "3"
